# Skull-King

./: CMakeLists.txt  README.md  Sounds.qrc  card.cpp  card.h  change.cpp  change.h  change.ui  client.cpp  client.h  client.ui  customized_button.cpp  customized_button.h  data.h  game.cpp  game.h  game.ui  game_background.qrc  game_logo.cpp  game_logo.h  game_logo.ui  history.cpp  history.h  history.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  person.cpp  person.h  player.cpp  player.h  server.cpp  server.h  server.ui  setting.cpp  setting.h  (+10 more)
